# Compile-Time-Graph-Library

./: .gitignore  CMakeLists.txt
src/cpp/: ctgl.cpp
src/h/: algorithm.h  graph.h  list.h  path.h  utility.h
src/test/: algorithm_test.cpp  forge.h  graph_test.cpp  list_test.cpp  path_test.cpp
